# Real-World-ML-Project

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployments/dev/backfill_technical_indicators/: backfill-technical-indicators-cm.yaml  candles-historical-d.yaml  kustomization.yaml
deployments/dev/candles/: candles-d.yaml
deployments/dev/kind/: all_operations.sh  create_cluster.sh  install_kafka.sh  kind-with-portmapping.yaml  port_forwarding.sh
deployments/dev/kind/manifests/: kafka-e11b.yaml  kafka-ui-all-in-one.yaml  mlflow-minio-secret.yaml  mlflow-values-old.yaml  mlflow-values.yaml
deployments/dev/technical_indicators/: technical_indicators-d.yaml  technical_indicators.yaml
deployments/dev/trades/: trades-d.yaml  trades.yaml
deployments/dev/training_pipelines/: kustomization.yaml
deployments/prod/candles/: candles.yaml
docker/: technical-indicators.Dockerfile  trades.Dockerfile
lessons/: session_1.md  session_2.md
services/candles/: settings.env
services/candles/src/candles/: config.py  main.py
services/predictor/: pyproject.toml
services/predictor/src/predictor/: config.py  model_registry.py  models.py  predict.py  train.py
services/predictor/src/predictor/mlruns/0/: meta.yaml
services/technical_indicators/: pyproject.toml  settings.env
services/technical_indicators/src/technical_indicators/: candle.py  config.py  main.py  query.sql  technical_indicator.py
services/trades/: pyproject.toml  settings.env
(+7 files in other folders)
