[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-expectations>=0.18.8",
    "loguru>=0.7.3",
    "mlflow>=3.1.0",
    "numpy>=2.2.5",
    "optuna>=4.4.0",
    "psycopg2>=2.9.10",
    "risingwave-py>=0.0.2",
    "scikit-learn==1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
